--- a/app/src/main/res/layout/poster_fragment.xml
+++ b/app/src/main/res/layout/poster_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,16 +10,5 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/recyclerview_poster"
     tools:context=".PosterFragment">
-
-    <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/gridview"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:numColumns="auto_fit"-->
-        <!--android:verticalSpacing="0dp"-->
-        <!--android:horizontalSpacing="0dp"-->
-        <!--android:stretchMode="columnWidth"-->
-        <!--android:gravity="center"-->
-        <!--/>-->
 
 </android.support.v7.widget.RecyclerView>
