--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,14 @@
 
     </style>
 
+    <!-- For full screen display -->
     <style name="FullScreenActivityTheme" parent="Theme.AppCompat.Light.NoActionBar" />
 
+    <!-- For FAB -->
+    <style name="menu_labels_style">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 
 </resources>
