--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
 
     <color name="primaryBackground">#FAFAFA</color>
     <color name="primaryText">#000000</color>
+
+    <!-- For FAB -->
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="half_black">#808080</color>
+
 </resources>
