Fix FloatingActionMenu collapsing by clicking on the screen problem

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,11 @@
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="1dp"
+        android:descendantFocusability="blocksDescendants"
+        android:id="@+id/fl_interceptor"/>
+
 </RelativeLayout>
