--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="black_semi_transparent">#B2000000</color>
     <color name="white">#fafafa</color>
     <color name="white_pressed">#f1f1f1</color>
-    <color name="half_black">#808080</color>
+    <color name="grey">#9e9e9e</color>
+    <color name="grey_pressed">#bdbdbd</color>
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
 
 </resources>
