--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
 
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="overview_text_size">14sp</dimen>
+    <dimen name="released_date_text_size">18sp</dimen>
+    <dimen name="vote_average_text_size">24sp</dimen>
 </resources>
