--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="overview_text_size">14sp</dimen>
     <dimen name="released_date_text_size">18sp</dimen>
     <dimen name="vote_average_text_size">24sp</dimen>
+
+    <dimen name="floating_action_button">12dp</dimen>
+    <dimen name="floating_action_button_pressed">8dp</dimen>
 </resources>
