--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,26 @@
 
     </style>
 
-    <!-- For full screen display -->
+    <!-- full screen display -->
     <style name="FullScreenActivityTheme" parent="Theme.AppCompat.Light.NoActionBar" />
 
-    <!-- For FAB -->
-    <style name="menu_labels_style">
+    <!-- Floating Action Menu -->
+    <style name="primaryFAB">
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentRight">true</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+    </style>
+    <style name="menuLableStyle">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- images -->
+    <style name="primaryImage">
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:padding">@dimen/image_no_padding_margin</item>
     </style>
 
 
