--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -55,7 +55,7 @@
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/drawee_poster"
                     android:layout_alignParentTop="true"
-                    android:layout_width="120dp"
+                    android:layout_width="@dimen/poster_width_in_detail"
                     android:layout_height="wrap_content"
                     fresco:viewAspectRatio="0.66667"
                     style="@style/primaryImage"
