Add videos and reviews to movie details

--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -6,15 +6,12 @@
     android:showDividers="middle"
     android:divider="@drawable/divider_drawable">
 
-
+    <!-- part 1: title, poster, rating, description -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/detail_page_vertical_margin"
-        android:paddingLeft="@dimen/detail_page_horizontal_margin"
-        android:paddingRight="@dimen/detail_page_horizontal_margin"
-        android:paddingTop="@dimen/detail_page_vertical_margin">
+        style="@style/detailMargin">
 
         <TextView
             android:layout_width="wrap_content"
@@ -66,6 +63,7 @@
                 android:textColor="@color/primaryText"
                 android:id="@+id/textview_vote_average"/>
 
+
         </RelativeLayout>
 
         <TextView
@@ -74,31 +72,22 @@
             android:textSize="@dimen/overview_text_size"
             android:textColor="@color/primaryText"
             android:id="@+id/textview_overview" />
-
     </LinearLayout>
 
-    <LinearLayout
+    <!-- part 2: videos -->
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        style="@style/detailMargin"
+        android:id="@+id/recyclerview_videos">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This part is for Trailer Videos"
-            android:textColor="@color/colorPrimaryDark"/>
+    </android.support.v7.widget.RecyclerView>
 
-    </LinearLayout>
-
-    <LinearLayout
+    <!-- part 3: reviews -->
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This part is for Reviews"
-            android:textColor="@color/colorPrimaryDark"/>
-    </LinearLayout>
+        style="@style/detailMargin"
+        android:id="@+id/recyclerview_reviews">
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
