--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,12 +21,14 @@
         android:id="@+id/fam_poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         style="@style/primaryFAB"
         fab:fab_addButtonColorNormal="@color/pink"
         fab:fab_addButtonColorPressed="@color/pinkPressed"
         fab:fab_addButtonPlusIconColor="@color/white"
         fab:fab_labelStyle="@style/menuLableStyle"
-        fab:fab_labelsPosition="left" >
+        fab:fab_labelsPosition="right" >
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_favorite"
