--- a/app/src/main/res/layout-sw600dp/main_activity.xml
+++ b/app/src/main/res/layout-sw600dp/main_activity.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/main_fragment"
         android:id="@+id/fragment_main"/>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
