--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -1,93 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:showDividers="middle"
-    android:divider="@drawable/divider_drawable">
+    android:layout_height="match_parent"
+    tools:context=".DetailActivity">
 
-    <!-- part 1: title, poster, rating, description -->
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/detailMargin">
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/detail_page_vertical_margin"
-            android:textSize="@dimen/title_text_size"
-            android:textColor="@color/primaryText"
-            android:id="@+id/textview_title"/>
-
-
-        <RelativeLayout
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/detail_page_vertical_margin">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <com.facebook.drawee.view.SimpleDraweeView
                 xmlns:fresco="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/drawee_poster"
-                android:layout_alignParentTop="true"
-                android:layout_width="@dimen/poster_width_in_detail"
+                android:id="@+id/drawee_backdrop"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                fresco:viewAspectRatio="0.66667"
+                android:fitsSystemWindows="true"
                 style="@style/primaryImage"
-                fresco:placeholderImage="@drawable/placeholder_poster"
+                fresco:viewAspectRatio="1.77778"
+                fresco:placeholderImage="@drawable/placeholder_backdrop"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/drawee_poster"
-                android:layout_toRightOf="@+id/drawee_poster"
-                android:paddingLeft="@dimen/detail_page_horizontal_margin"
-                android:paddingRight="@dimen/detail_page_horizontal_margin"
-                android:textSize="@dimen/released_date_text_size"
-                android:textColor="@color/primaryText"
-                android:id="@+id/textview_released_date"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textview_released_date"
-                android:layout_toEndOf="@+id/drawee_poster"
-                android:layout_toRightOf="@+id/drawee_poster"
-                android:paddingLeft="@dimen/detail_page_horizontal_margin"
-                android:paddingRight="@dimen/detail_page_horizontal_margin"
-                android:textSize="@dimen/overview_text_size"
-                android:textColor="@color/primaryText"
-                android:id="@+id/textview_vote_average"/>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin" />
 
 
-        </RelativeLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
-        <TextView
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/primaryBackground"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/overview_text_size"
-            android:textColor="@color/primaryText"
-            android:id="@+id/textview_overview" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:showDividers="middle"
+            android:divider="@drawable/divider_drawable">
 
-    <!-- part 2: videos -->
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/detailMargin"
-        android:id="@+id/recyclerview_videos">
+            <!-- part 1: title, poster, rating, description -->
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                style="@style/detailMargin">
 
-    </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/detail_page_vertical_margin"
+                    android:textSize="@dimen/title_text_size"
+                    android:textColor="@color/primaryText"
+                    android:id="@+id/textview_title"/>
 
-    <!-- part 3: reviews -->
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/detailMargin"
-        android:id="@+id/recyclerview_reviews">
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/detail_page_vertical_margin">
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+                        xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:id="@+id/drawee_poster"
+                        android:layout_alignParentTop="true"
+                        android:layout_width="@dimen/poster_width_in_detail"
+                        android:layout_height="wrap_content"
+                        fresco:viewAspectRatio="0.66667"
+                        style="@style/primaryImage"
+                        fresco:placeholderImage="@drawable/placeholder_poster"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/drawee_poster"
+                        android:layout_toRightOf="@+id/drawee_poster"
+                        android:paddingLeft="@dimen/detail_page_horizontal_margin"
+                        android:paddingRight="@dimen/detail_page_horizontal_margin"
+                        android:textSize="@dimen/released_date_text_size"
+                        android:textColor="@color/primaryText"
+                        android:id="@+id/textview_released_date"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textview_released_date"
+                        android:layout_toEndOf="@+id/drawee_poster"
+                        android:layout_toRightOf="@+id/drawee_poster"
+                        android:paddingLeft="@dimen/detail_page_horizontal_margin"
+                        android:paddingRight="@dimen/detail_page_horizontal_margin"
+                        android:textSize="@dimen/overview_text_size"
+                        android:textColor="@color/primaryText"
+                        android:id="@+id/textview_vote_average"/>
+
+
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/overview_text_size"
+                    android:textColor="@color/primaryText"
+                    android:id="@+id/textview_overview" />
+            </LinearLayout>
+
+            <!-- part 2: videos -->
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/detailMargin"
+                android:id="@+id/recyclerview_videos">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <!-- part 3: reviews -->
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/detailMargin"
+                android:id="@+id/recyclerview_reviews">
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+
+</android.support.design.widget.CoordinatorLayout>
+
