--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
 
+    <!-- collapsing toolbar to display backdrop image -->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
@@ -45,6 +46,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!-- fab from design library can disappear automatically with collapsing toolbar -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_set_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/detail_page_horizontal_margin"
+        android:src="@drawable/ic_favorite_white_18dp"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|end"
+        app:backgroundTint="@color/pink" />
+
+    <!-- main content -->
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
