--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="greyPressed">#BDBDBD</color>
     <color name="pink">#E91E63</color>
     <color name="pinkPressed">#EC407A</color>
+    <color name="yellow">#FFEE58</color>
 
 
 </resources>
