Minor changes (icon, unused files, etc)

--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -7,8 +7,7 @@
     android:layout_height="wrap_content"
     style="@style/primaryImage"
     fresco:viewAspectRatio="1.77778"
-    fresco:placeholderImage="@drawable/placeholder_poster"
     fresco:overlayImage="@drawable/play_arrow"
-    fresco:pressedStateOverlayImage="@color/greyPressed"
+    fresco:pressedStateOverlayImage="@color/blackSemiTransparent"
     tools:context="adapter.VideoAdapter"
     />
